# mev-arbitrage-bot

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  EXECUTION_PIPELINE.md  FINAL_SECURITY_REPORT.md  FINAL_VERIFICATION_REPORT.md  FLASHLOAN_FLOW.md  KNOWN_LIMITATIONS.md  MAINNET_DEPLOYMENT.md  MAINNET_READINESS.md  MAINNET_READY_CHECKLIST.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_BENCHMARKS.md  README.md  REMAINING_RISKS.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_REVIEW.md  TROUBLESHOOTING.md  ThreatModel.md  architecture.md  details-and-how-to-run.md  errors.txt  fix.py  fix2.py  fix3.py  flashbots.md  patch_pool.py  security.md  setup.md  strategy.md  troubleshooting.md
.github/workflows/: ci.yml
benches/: routing.rs
contracts/: ArbitrageExecutor.sol
contracts/src/: ArbitrageExecutor.sol
src/: chain.rs  config.rs  db.rs  latency.rs  lib.rs  main.rs  metrics.rs  types.rs
src/executor/: bidding.rs  bundle.rs  mod.rs  relayer.rs  wallet.rs
src/router/: graph.rs  mod.rs  multicall.rs  pool.rs
src/scanner/: decoder.rs  event.rs  mempool.rs  mev_share.rs  mod.rs
src/simulator/: evm.rs  mod.rs
tests/: bug_verification.rs  chaos_test.rs  routing_test.rs  simulation_test.rs
